# dutchbay-finmodel

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dutchbay_finmodel/: __init__.py  config_loader.py  core.py  monte_carlo.py  optimization.py  sensitivity.py
dutchbay_finmodel/configs/: dutchbay_lendercase_2025Q4.yaml  example_basecase.yaml
tests/: test_core.py  test_covenants.py  test_monte_carlo.py  test_optimization.py  test_regression_golden.py  test_sensitivity.py
